Hito 3: Creación de vista de registro. Utilidad para validar formularios. Vista de error y de éxito al momento del registro. Se agrega en el web.xml la página de inicio por defecto: bean-properties.jsf

--- a/WebContent/registration-success.xhtml
+++ b/WebContent/registration-success.xhtml
@@ -7,8 +7,13 @@
 	<link href="./css/styles.css" rel="stylesheet" type="text/css" />
 </h:head>
 <h:body>
-	<h1 class="title">Result Page 1</h1>
-	<h2>One. Uno. Isa.</h2>
-	<p>Blah, blah, blah.</p>
+	<div align="center">
+		<h1 class="title">Successfully Registered</h1>
+		<ul class="aligned">
+			<li>First name: #{registrationBean.firstName}</li>
+			<li>Last name: #{registrationBean.lastName}</li>
+			<li>Email address: #{registrationBean.emailAddress}</li>
+		</ul>
+	</div>
 </h:body>
 </html>
