--- a/WebContent/registration-error.xhtml
+++ b/WebContent/registration-error.xhtml
@@ -3,12 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<title>Navigate</title>
+	<title>Registration Error</title>
 	<link href="./css/styles.css" rel="stylesheet" type="text/css" />
 </h:head>
 <h:body>
-	<h1 class="title">Result Page 1</h1>
-	<h2>One. Uno. Isa.</h2>
-	<p>Blah, blah, blah.</p>
+	<h1 class="title">Registration Error</h1>
+	<h2>
+		You must supply all of first name, last name, and email address.
+		Please <a href="bean-properties.jsf">try again</a>.
+	</h2>
 </h:body>
 </html>
